--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,69 @@
-a{
-    scroll-behavior: smooth;
+body{
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    background: #fafafa;
+}
+
+#header-cont{
+    z-index: 99;
+    overflow: hidden;
+    min-height: 60px;
 }
 
 #header{
-    z-index: 99;
+    background: rgb(0,41,60);
+    color: white;
+}
+
+#header a{
+    color: #f1f3ce;
+}
+
+#header a:hover{
+    color: #1e656d;
 }
 
 #drawer{
     padding-top: 50px;
+    padding-bottom: 25px;
+}
+
+#drawer a:hover{
+    color: #f62a00;
 }
 
 main{
     padding: 100px 50px;
+}
+
+.component-mdl{
+    padding: 25px 0;
+}
+
+.component-mdl h3{
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.component-mdl h5{
+    padding-top: 10px;
+}
+
+.comp-example{
+    background: #f1f3ce;
+    padding: 25px 15px;
+    margin: 25px auto;
+    text-align: center;
+    width: 90%;
+}
+
+.comp-example p{
+    padding-top: 10px;
+}
+
+.comp-example div{
+    margin: 0 auto;
+}
+
+.comp-example table{
+    margin: 0 auto;
 }
